fix tooltips on mobile

--- a/Web/src/styles.scss
+++ b/Web/src/styles.scss
@@ -1028,6 +1028,10 @@ button.mat-menu-item:hover a{
   border-bottom: 1px dotted rgba(255, 255, 255, 0.5);
 }
 
+.mat-tooltip-handset{
+    font-size: 11px;
+}
+
 .border-tabs .mat-tab-label-active {
   background-color: #262626;
   border-top: 1px solid #4c4c4c;
